--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Dependencias
+node_modules/
 
+# Archivos de construcción
+build/
+dist/
+
+# Archivos de configuración de IDEs
+.idea/
+.vscode/
+
+# Archivos de logs
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+
+# Archivos de sistema operativo
+.DS_Store
+Thumbs.db
